# 1BYTE

./: .gitignore  1BYTE.sln  Brain storming.asta  CMakeLists.txt  README.md  SS.xlsx  competency_test.cpp
1BYTE/: 1BYTE.vcxproj  1BYTE.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Controller.cpp  Controller.h  Entry.cpp  HeaderOfConvenience.cpp  HeaderOfConvenience.h  How does a computer work.txt  Instruction.cpp  Instruction.h  RAM.h  Register.h
1BYTE/Controller/: Controller.h
1BYTE/Controller/BUS/: BUS.hpp
1BYTE/Controller/CPU/: CPU.h
1BYTE/Controller/CPU/ALU/: ALU.h
1BYTE/Controller/CPU/CU/: CU.h
1BYTE/Controller/CPU/IO/: IO.h
1BYTE/Controller/CPU/Instructions/: Instruction.h  Instruction.hpp
1BYTE/Controller/CPU/Register/: Register.h
1BYTE/Controller/Memory/RAM/: RAM.h  RAM.hpp
1BYTE/Controller/Memory/ROM/: ROM.cpp  ROM.h  ROM.hpp
1BYTE/Controller/Utils/: consts.hpp  types.hpp
1BYTE/old/: Register.h
OLD_CODE/: Controller.h  Entry.cpp  HeaderOfConvenience.h  Instruction.cpp
